<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNoteActivity"
    android:background="@drawable/backgroun5">

    <TextView
        android:id="@+id/addNoteHeading"
        android:layout_width="272dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:text="@string/add_notes"
        android:textColor="@color/orange"
        android:textSize="34sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp"
        android:fontFamily="@font/croissant_one"/>

    <ImageView
        android:id="@+id/saveButton"
        android:layout_width="87dp"
        android:layout_height="50dp"
        android:layout_alignTop="@id/addNoteHeading"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="29dp"
        android:src="@drawable/done_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/addNoteHeading"
        android:layout_marginTop="47dp"
        android:background="@drawable/orange_border"
        android:hint="@string/enter_the_title"
        android:textColorHint="@color/black"
        android:maxLines="1"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textSize="24sp"
        tools:ignore="MissingConstraints"
        android:fontFamily="@font/poppins_bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="103dp" />

    <EditText
        android:id="@+id/contentEditText"
        android:layout_width="410dp"
        android:layout_height="937dp"
        android:layout_below="@+id/titleEditText"
        android:layout_marginTop="31dp"
        android:background="@drawable/orange_border"
        android:gravity="top"
        android:hint="@string/enter_the_description"
        android:textColorHint="@color/black"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleEditText"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />


</RelativeLayout>